<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_outline_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_manage_apps"
        android:icon="@drawable/ic_outline_add"
        android:title="@string/action_manage_apps"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_list"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unfreeze_list"
        android:title="@string/action_unfreeze_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unfreeze_remove_list"
        android:title="@string/action_unfreeze_all_remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_list"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
