<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/picker_filter_user_apps"
            android:checkable="true"
            android:title="@string/filter_user_apps" />
        <item
            android:id="@+id/picker_filter_system_apps"
            android:checkable="true"
            android:title="@string/filter_system_apps" />
    </group>
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/picker_filter_frozen_apps"
            android:checkable="true"
            android:title="@string/filter_frozen_apps" />
        <item
            android:id="@+id/picker_filter_unfrozen_apps"
            android:checkable="true"
            android:title="@string/filter_unfrozen_apps" />
    </group>
</menu>
