<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_medium"
    android:paddingTop="@dimen/padding_medium"
    android:paddingEnd="@dimen/padding_medium"
    android:paddingBottom="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:text="@string/filter_by"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <RadioGroup
        android:id="@+id/app_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/all_apps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/filter_all_apps" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/user_apps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/filter_user_apps" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/system_apps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/filter_system_apps" />
    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/frozen_apps"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/filter_frozen_apps" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/unfrozen_apps"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:checked="true"
        android:text="@string/filter_unfrozen_apps" />

</LinearLayout>
