<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_freezer">

    <fragment
        android:id="@+id/nav_freezer"
        android:name="com.aistra.hail.ui.freezer.FreezerListFragment"
        android:label="@string/title_freezer">
        <argument
            android:name="listId"
            android:defaultValue="all_frozen"
            app:argType="string" />
        <argument
            android:name="listName"
            android:defaultValue="Freezer"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_lists"
        android:name="com.aistra.hail.ui.freezer.FreezerFragment"
        android:label="@string/title_lists">
        <action
            android:id="@+id/action_nav_lists_to_freezerListFragment"
            app:destination="@id/freezerListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_modes"
        android:name="com.aistra.hail.ui.modes.ModesFragment"
        android:label="@string/title_modes">
        <action
            android:id="@+id/action_nav_modes_to_modeDetailFragment"
            app:destination="@id/modeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/modeDetailFragment"
        android:name="com.aistra.hail.ui.modes.ModeDetailFragment"
        android:label="{modeName}">
        <argument
            android:name="modeId"
            app:argType="string" />
        <argument
            android:name="modeName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/freezerListFragment"
        android:name="com.aistra.hail.ui.freezer.FreezerListFragment"
        android:label="{listName}">
        <argument
            android:name="listId"
            app:argType="string" />
        <argument
            android:name="listName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.aistra.hail.ui.settings.SettingsFragment"
        android:label="@string/title_settings">
        <action
            android:id="@+id/action_nav_settings_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.aistra.hail.ui.about.AboutFragment"
        android:label="@string/title_about" />
</navigation>
