<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/padding_small">

        <RadioGroup
            android:id="@+id/app_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/user_apps"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:text="@string/filter_user_apps" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/system_apps"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="@dimen/padding_medium"
                android:paddingEnd="@dimen/padding_medium"
                android:text="@string/filter_system_apps" />

        </RadioGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/frozen_apps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/filter_frozen_apps" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/unfrozen_apps"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:text="@string/filter_unfrozen_apps" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
