<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/padding_small"
            android:paddingVertical="4dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/frozen_chip"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:checkable="true"
                android:text="@string/filter_frozen_apps"
                app:checkedIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/unfrozen_chip"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                android:checked="true"
                android:checkable="true"
                android:text="@string/filter_unfrozen_apps"
                app:checkedIconVisible="false" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_medium"
                android:text="&#183;"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.chip.Chip
                android:id="@+id/system_chip"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:checkable="true"
                android:text="@string/filter_system_apps"
                app:checkedIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/user_chip"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                android:checked="true"
                android:checkable="true"
                android:text="@string/filter_user_apps"
                app:checkedIconVisible="false" />

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/msg_no_apps_in_list"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/padding_small" />

    </FrameLayout>

</LinearLayout>
